| Summary: | ASTERISK-30351: manager: Originate variables are not added when setvar used in manager.conf | ||
| Reporter: | Sebastian Gutierrez (sum) | Labels: | |
| Date Opened: | 2022-12-13 05:13:37.000-0600 | Date Closed: | 2023-01-03 11:53:47.000-0600 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Core/ManagerInterface |
| Versions: | 13.38.3 20.0.1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | affects all versions, ubuntu 20 | Attachments: | ( 0) 6a1623b76ddf7cbc90b159acfa2b94b578102bea.png ( 1) 6bbba82355a15ceeed4069d91d2ecf3890ad90f3.png |
| Description: | If I add into manager.conf setvar option I can push the hangup handler there and works
setvar=CHANNEL(hangup_handler_push)=functions,OriginateHangup then the variables that I set on the Originate action are not added I fixed the issue like this: | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-12-13 05:13:40.977-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Asterisk Team (asteriskteam) 2022-12-13 05:13:42.309-0600 Per the Asterisk versions page [1], the maintenance (bug fix) support for the Asterisk branch you are using has ended. For continued maintenance support please move to a supported branch of Asterisk. After testing with a supported branch, if you find this problem has not been resolved, please open a new issue against the latest version of that Asterisk branch. Thanks! [1] https://wiki.asterisk.org/wiki/display/AST/Asterisk+Versions By: Asterisk Team (asteriskteam) 2022-12-13 05:15:31.420-0600 This issue has been reopened as a result of your commenting on it as the reporter. It will be triaged once again as applicable. By: Sebastian Gutierrez (sum) 2022-12-13 05:16:51.669-0600 In the pictures you can see the changes to allow to add the variables at the end, the if is wrong in this case if(v->next) conditional is always false and should be removed By: Benjamin Keith Ford (bford) 2022-12-14 14:26:10.558-0600 Were you wanting to submit a patch on Gerrit\[1] for this? Instructions on how to do so can be found on the wiki\[2]. \[1]: https://gerrit.asterisk.org/q/status:open \[2]: https://wiki.asterisk.org/wiki/display/AST/Gerrit+Usage By: Sebastian Gutierrez (sum) 2022-12-15 06:21:19.594-0600 no Im not submitting a patch, to tell you the truth I've been using asterisk for many many years, I contribute in the past but really the process is old, slow and complex. so I decided to not submit patches anymore, I added this here as it is trivial but If you prefer to have the bug just close the issue. By: Friendly Automation (friendly-automation) 2023-01-03 11:53:48.578-0600 Change 19745 merged by Friendly Automation: manager: Fix appending variables. [https://gerrit.asterisk.org/c/asterisk/+/19745|https://gerrit.asterisk.org/c/asterisk/+/19745] By: Friendly Automation (friendly-automation) 2023-01-03 11:56:10.441-0600 Change 19804 merged by Friendly Automation: manager: Fix appending variables. [https://gerrit.asterisk.org/c/asterisk/+/19804|https://gerrit.asterisk.org/c/asterisk/+/19804] By: Friendly Automation (friendly-automation) 2023-01-04 05:51:20.157-0600 Change 19805 merged by George Joseph: manager: Fix appending variables. [https://gerrit.asterisk.org/c/asterisk/+/19805|https://gerrit.asterisk.org/c/asterisk/+/19805] | ||